# memecoinsrace_front

./: CNAME  asset-manifest.json  index.html  package-lock.json  package.json
.github/workflows/: main.yml
mcr-contract/: Anchor.toml  package-lock.json  package.json
mcr-contract/TokenHome/: BetUser.json  Outcome.json  betTokenId.json
mcr-contract/bet-program/: Anchor.toml  package.json
mcr-contract/bet-program/programs/bet-program/: BettingScript.js  Cargo.toml
mcr-contract/bet-program/programs/bet-program/src/: lib.rs
mcr-contract/bet-program/src/: lib.rs
mcr-contract/tests/: mcr-contract.ts
public/: index.html  robots.txt  sitemap.xml
src/: App.css  App.js  idl.json  index.css  index.js  mcr_switchboard.json
static/css/: main.2655dca2.chunk.css  main.2655dca2.chunk.css.map  main.4dea59ac.chunk.css  main.4dea59ac.chunk.css.map  main.6e6ab983.chunk.css  main.6e6ab983.chunk.css.map  main.8b017f2a.chunk.css  main.8b017f2a.chunk.css.map
static/js/: 2.7a919e63.chunk.js  2.7a919e63.chunk.js.map  2.bd088688.chunk.js  2.bd088688.chunk.js.map  3.97da762f.chunk.js  3.97da762f.chunk.js.map  3.b85b5c0a.chunk.js  3.b85b5c0a.chunk.js.map  main.1828593d.chunk.js  main.1828593d.chunk.js.map  main.251bdabf.chunk.js  main.251bdabf.chunk.js.map  main.6ea8cae5.chunk.js  main.6ea8cae5.chunk.js.map  main.90ca3c9f.chunk.js  main.90ca3c9f.chunk.js.map  runtime-main.0b23a9b1.js  runtime-main.0b23a9b1.js.map  runtime-main.1efe1780.js  runtime-main.1efe1780.js.map  runtime-main.2ab9a92b.js  runtime-main.2ab9a92b.js.map  runtime-main.b5b2309b.js  runtime-main.b5b2309b.js.map
(+16 files in other folders)
